# statistical-volume-rendering-experiments

./: .gitattributes  .gitignore  AGENTS.md  README.md  common.py  common.slang  create_dataset.py  flake.nix  infer.py  model.pth  pathtracer.py  pathtracer.slang  pyproject.toml  raycaster.slang  train.py
.zed/: tasks.json
assets/: CT-Head.pvm  CT-Head.vdb  MRI-Head.pvm  MRI-Head.vdb  pvm_format.md  sources.md  wdas_cloud_sixteenth.vdb
scripts/: common.slang  create_dataset.py  decompile.py  pathtracer.py  pvm_to_vdb.py  train.py
volff/: __main__.py  constants.py  dataset.py  model.py  trace.py  transform.py  volume.py
volff/cli/: main.py  main_reconstructed.py
volff/kernels/: common.slang  pathtracer.slang  raycaster.slang
